# Surrogate

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/surrogate-app/: Cargo.toml
crates/surrogate-app/src/: lib.rs  main.rs  proxy_manager.rs  system_proxy.rs
crates/surrogate-bridge/: Cargo.toml
crates/surrogate-bridge/src/: bridge_trait.rs  lib.rs  linux.rs  macos.rs
crates/surrogate-bridge/tests/: bridge_tests.rs
crates/surrogate-contract/: Cargo.toml
crates/surrogate-contract/src/: config.rs  domain.rs  error.rs  events.rs  health.rs  lib.rs  plugin.rs  rules.rs  transport.rs
crates/surrogate-control/: Cargo.toml
crates/surrogate-control/src/: ability_lens.rs  builtin_plugins.rs  config_store.rs  coverage.rs  error.rs  import_engine.rs  lib.rs  plugin_registry.rs  rule_compiler.rs  test_workbench.rs
crates/surrogate-kernel/: Cargo.toml
crates/surrogate-kernel/src/: lib.rs  pool.rs  session.rs  socks5.rs  streaming.rs
crates/surrogate-kernel/src/protocols/: mod.rs  shadowsocks.rs  trojan.rs  vless.rs  vmess.rs  wireguard.rs
crates/surrogate-kernel/tests/: http_connect_flow.rs
crates/surrogate-macos/: Cargo.toml
crates/surrogate-macos/src/: dispatcher.rs  event_format.rs  lib.rs  main.rs  navigation.rs  theme.rs  tray.rs  window.rs
crates/surrogate-macos/src/pages/: ability_lens.rs  apps.rs  components.rs  egress_lab.rs  import_lab.rs  mod.rs  observe.rs  overview.rs  plugins.rs  profiles.rs  rules.rs  settings.rs  test.rs  tools.rs
crates/surrogate-macos/tests/: integration_test.rs
docs/clean-room/: README.md
docs/guide/: configuration.md  user-guide.md
examples/: basic.toml
scripts/: package-macos.sh
