[workspace]
members = [
    "crates/surrogate-contract",
    "crates/surrogate-kernel",
    "crates/surrogate-control",
    "crates/surrogate-bridge",
    "crates/surrogate-app",
    "crates/surrogate-macos",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.6"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
httparse = "1.10"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.8"
