[package]
name = "surrogate-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Top-level assembly and CLI entry point for the Surrogate proxy"

[dependencies]
anyhow.workspace = true
surrogate-contract = { path = "../surrogate-contract" }
surrogate-kernel = { path = "../surrogate-kernel" }
tokio.workspace = true
