[package]
name = "surrogate-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Top-level assembly and CLI entry point for the Surrogate proxy"

[lib]
name = "surrogate_app"

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
surrogate-contract = { path = "../surrogate-contract" }
surrogate-kernel = { path = "../surrogate-kernel" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
toml.workspace = true
