[package]
name = "surrogate-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, traits, and contracts for the Surrogate proxy kernel"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
