[package]
name = "surrogate-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macOS native GUI application for the Surrogate proxy"

[lib]
name = "surrogate_macos_lib"

[dependencies]
surrogate-app = { path = "../surrogate-app" }
surrogate-contract = { path = "../surrogate-contract" }
surrogate-control = { path = "../surrogate-control" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoanut = "0.2"
tray-icon = "0.22"
png = "0.18"
objc = "0.2"
